compiler/testData/diagnostics/tests/callableReference/kt46437.fir.kt
fun box(): String {
    if (true) X::<!UNRESOLVED_REFERENCE!>y<!> else null
    return "OK"
}

object X {
    private val y = null
}